# deciduously-com-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  release.sh
drafts/: cljs-exercises.md  clojure-blog.md  formdata-typescript.md  great-crates.md  haskell-in-english.md  hello.md  higher-order-functions-rust.md  odroid.md  rust-and-reason.md  rx-canvas-typescript-vue.md  ttt-hs.md
posts/: hello.html
src/: handlers.rs  main.rs  markdown.rs  publish.rs
static/: index.css  prism.js
static/themes/: prism.css
templates/: .#index.html  404.html  contact.html  demos.html  index.html  posts.html  skel.html
templates/posts/: hello.html  in-english.html
